--- a/css/final/project.html
+++ b/css/final/project.html
@@ -11,8 +11,8 @@
     <div class="header">
         <h1 style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; font-size: 50px;">Perfumy</h1>
         <ul>
-            <li>Home</li> |
-            <li>About</li> |
+            <li>Home |</li> 
+            <li>About |</li> 
             <li>Contact</li> 
         </ul>
     </div>
